fix Author Put
